# gradebook

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json
cli/: assignments_menu.py  attendance_menu.py  categories_menu.py  course_menu.py  formatters.py  main.py  menu_helpers.py  model_formatters.py  path_utils.py  students_menu.py  submissions_menu.py  weights_menu.py
cli/menus/: assignments_menu.py  attendance_menu.py  categories_menu.py  course_menu.py  students_menu.py  submissions_menu.py  weights_menu.py
core/: attendance_stager.py  formatters.py  response.py  utils.py
models/: assignment.py  category.py  gradebook.py  student.py  submission.py  types.py
project_docs/: mvp_gradebook_task_list.md  post_mvp_roadmap.md  project_file_structure.md  refactoring.md
schema/: json_store.py  schema.py
tests/: conftest.py  test_assignment.py  test_category.py  test_gradebook.py  test_student.py  test_submission.py
tests/test_data/: metadata.json
utils/: utils.py
